--- a/.github/workflows/build_pull_request.yml
+++ b/.github/workflows/build_pull_request.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
-          repository: 'bigbabyboost/komikku'
+          repository: 'bigbabyboost/shiori'
           ref: 'master'
 
       - name: Validate Gradle Wrapper
