--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,10 +1,10 @@
 blank_issues_enabled: false
 contact_links:
   - name: ⚠️ Application issue
-    url: https://github.com/bigbabyboost/shiori/issues/new/choose
-    about: Issues and requests about the app itself should be opened in the shiori repository instead
+    url: https://github.com/bigbabyboost/komikku/issues/new/choose
+    about: Issues and requests about the app itself should be opened in the komikku repository instead
   - name: ⚠️ Extensions issue
-    url: https://github.com/bigbabyboost/shiori-extensions/issues/new/choose
+    url: https://github.com/bigbabyboost/komikku-extensions/issues/new/choose
     about: Issues and requests about the app itself should be opened in the Shiori-Extensions repository instead
   - name: 🖥️ Shiori website
     url: https://bigbabyboost.github.io/
