--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -168,7 +168,7 @@ jobs:
       - name: Load Client Secrets file
         env:
           DATA: ${{ secrets.CLIENT_SECRETS_JSON }}
-        run: mkdir -p app/src/main/assets echo $DATA | base64 -di > app/src/main/assets/client_secrets.json
+        run: mkdir -p app/src/main/assets && echo $DATA | base64 -di > app/src/main/assets/client_secrets.json
 
       - name: Set up gradle
         uses: gradle/actions/setup-gradle@d156388eb19639ec20ade50009f3d199ce1e2808 # v4
